# ubiquitous-memory

./: .gitignore  README.md  main.py  pyproject.toml  test
expense_tracker/: cli.py  models.py  storage.py  tracker.py
tests/: test_expense_tracker.py
