[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
version = "1.0.0"
description = "年度花销规划与实际消费统计工具"
requires-python = ">=3.10"

[project.scripts]
expense-tracker = "expense_tracker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
